--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,6 +30,10 @@ jobs:
       run: |
         pip install -r requirements.txt
 
+    - name: Run Tests
+      run: |
+        pytest tests/
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -40,6 +44,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
+      if: success()
       uses: docker/build-push-action@v2
       with:
         context: .
