--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 et-xmlfile==1.1.0
 Flask==3.0.2
+Flask-Testing==0.8.1
 h11==0.14.0
 idna==3.6
 itsdangerous==2.1.2
@@ -16,6 +17,7 @@ outcome==1.3.0.post0
 packaging==24.0
 pandas==2.2.1
 PySocks==1.7.1
+pytest==8.1.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
