--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,9 @@ openpyxl==3.1.2
 outcome==1.3.0.post0
 packaging==24.0
 pandas==2.2.1
+pydantic==2.7.0
+pydantic-core==2.18.1
+pyjwt==2.8.0
 PySocks==1.7.1
 pytest==8.1.1
 python-dateutil==2.9.0.post0
@@ -26,6 +29,7 @@ selenium==4.19.0
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+supabase==2.4.2
 trio==0.25.0
 trio-websocket==0.11.1
 typing_extensions==4.10.0
