--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+email-validator==2.1.1
 et-xmlfile==1.1.0
 Flask==3.0.2
 Flask-Testing==0.8.1
