--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,6 +38,7 @@ jobs:
         echo "ENVIRONMENT=${{ secrets.ENVIRONMENT }}" >> $GITHUB_ENV
         echo "TEMP_SECRET_KEY=${{ secrets.TEMP_SECRET_KEY }}" >> $GITHUB_ENV
         echo "BOXVALET_TEST_PRIVATE_KEY_PATH=${{ secrets.BOXVALET_TEST_PRIVATE_KEY_PATH }}" >> $GITHUB_ENV
+        echo "BOXVALET_TEST_PUBLIC_KEY_PATH=${{ secrets.BOXVALET_TEST_PUBLIC_KEY_PATH }}" >> $GITHUB_ENV
 
     - name: Run Tests
       run: |
