--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,6 +39,7 @@ jobs:
         echo "TEMP_SECRET_KEY=${{ secrets.TEMP_SECRET_KEY }}" >> $GITHUB_ENV
         echo "BOXVALET_TEST_PRIVATE_KEY_PATH=${{ secrets.BOXVALET_TEST_PRIVATE_KEY_PATH }}" >> $GITHUB_ENV
         echo "BOXVALET_TEST_PUBLIC_KEY_PATH=${{ secrets.BOXVALET_TEST_PUBLIC_KEY_PATH }}" >> $GITHUB_ENV
+      shell: bash
 
     - name: Run Tests
       run: |
