--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,6 +18,16 @@ jobs:
       with:
         python-version: '3.9'
 
+    - name: Decode Private Key
+      run: |
+        echo "${{ secrets.PRIVATE_KEY_BASE64 }}" | base64 --decode > ${{ github.workspace }}/private_key.pem
+      shell: bash
+
+    - name: Decode Public Key
+      run: |
+        echo "${{ secrets.PUBLIC_KEY_BASE64 }}" | base64 --decode > ${{ github.workspace }}/public_key.pem
+      shell: bash
+
     - name: Cache Python packages
       uses: actions/cache@v2
       with:
@@ -37,9 +47,8 @@ jobs:
         echo "SUPABASE_SERVICE_ROLE_KEY=${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}" >> $GITHUB_ENV
         echo "ENVIRONMENT=${{ secrets.ENVIRONMENT }}" >> $GITHUB_ENV
         echo "TEMP_SECRET_KEY=${{ secrets.TEMP_SECRET_KEY }}" >> $GITHUB_ENV
-        echo "BOXVALET_TEST_PRIVATE_KEY_PATH=${{ secrets.BOXVALET_TEST_PRIVATE_KEY_PATH }}" >> $GITHUB_ENV
-        echo "BOXVALET_TEST_PUBLIC_KEY_PATH=${{ secrets.BOXVALET_TEST_PUBLIC_KEY_PATH }}" >> $GITHUB_ENV
-      shell: bash
+        echo "BOXVALET_TEST_PRIVATE_KEY_PATH=${{ github.workspace }}/private_key.pem" >> $GITHUB_ENV
+        echo "BOXVALET_TEST_PUBLIC_KEY_PATH=${{ github.workspace }}/public_key.pem" >> $GITHUB_ENV
 
     - name: Run Tests
       run: |
