--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,6 +50,7 @@ jobs:
         echo "BOXVALET_TEST_PRIVATE_KEY_PATH=${{ github.workspace }}/private_key.pem" >> $GITHUB_ENV
         echo "BOXVALET_TEST_PUBLIC_KEY_PATH=${{ github.workspace }}/public_key.pem" >> $GITHUB_ENV
         echo "BOXVALET_TEST_KEY_ID=${{ secrets.BOXVALET_TEST_KEY_ID }}" >> $GITHUB_ENV
+        echo "BOX_VALET_JWT_AUDIENCE=${{ secrets.BOX_VALET_JWT_AUDIENCE }}" >> $GITHUB_ENV
 
     - name: Run Tests
       run: |
