--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,11 @@ services:
       - SUPABASE_KEY=${SUPABASE_KEY}
     ports:
       - "8080:5001"
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: "0.5"
 
   nginx:
     image: nginx:latest
