--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 requests==2.31.0
+resend==2.0.0
 selenium==4.19.0
 six==1.16.0
 sniffio==1.3.1
